Update event details for November 2025
Added details about the AIx: Safe AI for Seniors event on November 14, 2025, including sponsorship and focus on senior citizens.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,28 @@
                       <div class="timeline-date year">2025</div>
                     </div>
 
+
+                   
+                  <!-- November 2025 -->
+                  <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date month">October</div>
+
+
+                      <div class="timeline-content">
+                        <p>
+                          A day-long, free, hybrid event, 
+                          <b><a href="https://sites.google.com/cse.sc.edu/safe-ai-for-seniors" target="_blank">AIx: Safe AI for Seniors</a></b>, 
+                          will be held on November 14 (Friday). 
+                          Sponsored by AAAI and local organizations, this community outreach initiative will focus 
+                          on the role of AI in supporting senior citizens. RSVP and join us.
+                        </p>
+                      </div>
+
+                  </div>
+                  <!-- End of November 2025 -->
+
+
                     
                   <!-- October 2025 -->
                   <div class="timeline-item">
@@ -209,13 +231,6 @@
                           A paper on <i>A Neurosymbolic Fast and Slow Architecture for Graph Coloring</i> is accepted at 
                           <a href="http://cogsys.org/conference/2025/" target="_blank">ACS 2025</a>. 
                           Preprint at <a href="https://arxiv.org/abs/2412.01752">arXiv</a>.
-                        </p>
-                      </div>
-
-                      <div class="timeline-content">
-                        <p>
-                          A day-long event, <b>AIx: AI for Seniors</b>, will be held on November 14 (Friday). 
-                          Sponsored by AAAI, this community outreach initiative will focus on the role of AI in supporting senior citizens. 
                         </p>
                       </div>
 
