--- a/demos/index.html
+++ b/demos/index.html
@@ -94,8 +94,9 @@
                 >[Repository]</a
               >
               <a href="https://arxiv.org/abs/2508.16753" target="_blank" rel="noopener noreferrer"
-                >[Preprint]</a
+                >[Paper]</a
               >
+              at <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>, Singapore, January 2026.
             </div>
           </div>
 
@@ -749,3 +750,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
