Updated gaico paper details

--- a/demos/index.html
+++ b/demos/index.html
@@ -73,7 +73,7 @@
 
             <div style="flex: 1">
               <h3 class="card-text">
-                GAICo: GenAI Results Comparator | 2025
+                GAICo: GenAI Results Comparator | <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>
                 <span class="tag tag-method">LLM Evaluation</span>
                 <span class="tag tag-method">Trust Rating</span>
               </h3>
@@ -94,11 +94,12 @@
                 >[Repository]</a
               >
               <a href="https://arxiv.org/abs/2508.16753" target="_blank" rel="noopener noreferrer"
-                >[Paper]</a
+                >[IAAI/AAAI 2026 Paper]</a
               >
-              at <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>, Singapore, January 2026.
+              
             </div>
           </div>
+          
 
           <div style="display: flex; justify-content: center; gap: 15px">
             <div style="flex: 0.8">
@@ -750,4 +751,5 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
