--- a/members/index.html
+++ b/members/index.html
@@ -59,6 +59,8 @@
                             <span class="tag tag-method">Neuro-Symbolic AI</span>
                             <br><br>
                             Domains:
+                            <span class="tag tag-domain">Finance</span>,
+                            <span class="tag tag-domain">Health</span>,
                             <span class="tag tag-domain">Power IoT</span>,
                             <span class="tag tag-domain">Elections</span>,
                             <span class="tag tag-domain">Water</span>
@@ -334,4 +336,5 @@
 </body>
 
 </html>
+
 
