Update members page with new content and structure
The HTML structure was updated to include new members, their research interests, and contact information. Additionally, some placeholders were removed and existing content was refined for clarity.

--- a/members/index.html
+++ b/members/index.html
@@ -55,6 +55,7 @@
                             <a target="_blank" href="mailto:biplav.s@sc.edu">biplav.s@sc.edu</a>
                             <br>
                             Research Interests:
+                            <span class="tag tag-method">Automated Planning</span>,
                             <span class="tag tag-method">Chatbots</span>,
                             <span class="tag tag-method">Trust Rating</span>,
                             <span class="tag tag-method">Neuro-Symbolic AI</span>
@@ -327,6 +328,7 @@
 </body>
 
 </html>
+
 
 
 
