update mapf project page

--- a/projects/mapf_page/index.html
+++ b/projects/mapf_page/index.html
@@ -69,6 +69,7 @@
           <ul style="list-style-type: disc; padding-left: 20px; margin: 0;">
             <li style="margin-bottom: 20px; font-size: 15px; line-height: 1.4;">
               <strong>Scalable Multi-Agent Path Finding using Collision-Aware Dynamic Alert Mask and a Hybrid Execution Strategy</strong><br>
+              <i>Authors: Bharath Muppasani, Ritirupa Dey, Biplav Srivastava, Vignesh Narayanan</i><br>
               <!-- <i>Anonymous Submission</i><br> -->
               <a href="files/MAPF_25.pdf" target="_blank">[Paper]</a>
             </li>
