--- a/members/index.html
+++ b/members/index.html
@@ -176,7 +176,7 @@
 
             <tr style="padding:0px">
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                    <h2>Undergraduate Students</h2>
+                    <h2>Masters Students</h2>
                     <div class="grid">
                         <img src="images_members/nitin.jpg">
                         <figcaption style="padding-top: -10%;">
@@ -328,6 +328,7 @@
 </body>
 
 </html>
+
 
 
 
