--- a/demos/index.html
+++ b/demos/index.html
@@ -64,27 +64,32 @@
 
           <div style="display: flex; justify-content: center; gap: 15px">
             <div style="flex: 0.8">
-              <img
-                src="../images/GAICo_Demo.png"
-                alt="GAICo Demonstration"
-                style="width: 280px; height: 200px; border-radius: 10px; object-fit: scale-down"
-              />
+              <iframe
+                width="300"
+                height="200"
+                src="https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/preview"
+                title="GAICo Demonstration"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
             </div>
 
             <div style="flex: 1">
               <h3 class="card-text">
-                GAICo: GenAI Results Comparator | <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>
+                GAICo: GenAI Results Comparator |
+                <a href="https://aaai.org/conference/aaai/aaai-26/iaai-26-call/" target="_blank"
+                  >IAAI/AAAI 2026</a
+                >
                 <span class="tag tag-method">LLM Evaluation</span>
                 <span class="tag tag-method">Trust Rating</span>
               </h3>
               <p>
-                A Python library providing multi-modal evaluation metrics to compare generative AI outputs, 
-                often against references. Features streamlined workflows for model comparison and visualization. 
+                A Python library providing multi-modal evaluation metrics to compare generative AI
+                outputs, often against references. Features streamlined workflows for model
+                comparison and visualization.
               </p>
-              <a
-                href="https://tinyurl.com/yvu78n9k"
-                target="_blank"
-                rel="noopener noreferrer"
+              <a href="https://tinyurl.com/yvu78n9k" target="_blank" rel="noopener noreferrer"
                 >[Demo Video]</a
               >
               <a
@@ -96,10 +101,8 @@
               <a href="https://arxiv.org/abs/2508.16753" target="_blank" rel="noopener noreferrer"
                 >[IAAI/AAAI 2026 Paper]</a
               >
-              
             </div>
           </div>
-          
 
           <div style="display: flex; justify-content: center; gap: 15px">
             <div style="flex: 0.8">
@@ -335,20 +338,19 @@
                 <span class="tag tag-method">Trusted AI</span>
               </h3>
               <p>
-                As Artificial Intelligence (AI) systems become more powerful, concerns about trust issues like bias limit their adoption. 
-                Bias often arises with respect to protected attributes such as gender, race, and age. We present ARC, an extensible tool 
-                that rates AI models through a causal lens, covering bias, robustness to perturbations, and accuracy. ARC assists developers 
-                in improving models and helps end-users make informed choices. It currently supports four tasks: binary classification, 
-                sentiment analysis, group recommendation, and time-series forecasting, and allows users to evaluate models on custom datasets. 
-                The rating method is model-independent and causally interpretable.
+                As Artificial Intelligence (AI) systems become more powerful, concerns about trust
+                issues like bias limit their adoption. Bias often arises with respect to protected
+                attributes such as gender, race, and age. We present ARC, an extensible tool that
+                rates AI models through a causal lens, covering bias, robustness to perturbations,
+                and accuracy. ARC assists developers in improving models and helps end-users make
+                informed choices. It currently supports four tasks: binary classification, sentiment
+                analysis, group recommendation, and time-series forecasting, and allows users to
+                evaluate models on custom datasets. The rating method is model-independent and
+                causally interpretable.
               </p>
               <!-- <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/358475224_ROSE_Tool_and_Data_ResOurces_to_Explore_the_Instability_of_SEntiment_Analysis_Systems/links/6203f8d0c83d2b75dffd6ecc/ROSE-Tool-and-Data-ResOurces-to-Explore-the-Instability-of-SEntiment-Analysis-Systems.pdf"
             target="_blank" rel="noopener noreferrer">[Paper]</a> -->
-              <a
-                href="https://tinyurl.com/bd3cxhrb"
-                target="_blank"
-                >[Demo Video]</a
-              >
+              <a href="https://tinyurl.com/bd3cxhrb" target="_blank">[Demo Video]</a>
               <a
                 href="http://casy.cse.sc.edu/causal_rating"
                 target="_blank"
@@ -751,5 +753,3 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
-
-
