--- a/index.html
+++ b/index.html
@@ -84,42 +84,57 @@
                       hard problems facing the society with an inclusive, value-driven, focus.
                     </p>
 
-                    <div
-                      style="
-                        background-color: #cef1c7;
-                        padding: 6px 10px;
-                        border-radius: 5px;
-                        margin: 10px 0;
-                      "
-                    >
-                      <p align="justify" style="font-weight: bold; margin: 0">
+                    <div style="padding: 6px 10px; border-radius: 5px; margin: 10px 0">
+                      <p align="justify" style="margin: 0; line-height: 1.3">
                         Our <b>differentiating initiatives</b> are in working with, including
-                        <a href="https://ai4society.github.io/planfm/" target="_blank">training</a>,
-                        large language models and
+                        <a
+                          href="https://ai4society.github.io/planfm/"
+                          target="_blank"
+                          class="initiative-group group-planning"
+                          >training</a
+                        >, large language models and
                         <a
                           href="https://ai4society.github.io/projects/ontology/index.html"
                           target="_blank"
+                          class="initiative-group group-planning"
                           >creating ontology</a
                         >
                         for automated planning (<a
                           href="https://ai4society.github.io/projects/generalized_planning/index.html"
                           target="_blank"
+                          class="initiative-group group-planning"
                           >generalized planning</a
                         >), black-box
                         <a
                           href="https://ai4society.github.io/projects/rating_page/index.html"
                           target="_blank"
+                          class="initiative-group group-assessment"
                           >assessment and rating for AI</a
                         >
-                        (<a href="https://pypi.org/project/GAICo/" target="_blank">GAICO</a> and
-                        <a href="http://casy.cse.sc.edu/causal_rating" target="_blank">ARC</a>
+                        (<a
+                          href="https://pypi.org/project/GAICo/"
+                          target="_blank"
+                          class="initiative-group group-assessment"
+                          >GAICO</a
+                        >
+                        and
+                        <a
+                          href="http://casy.cse.sc.edu/causal_rating"
+                          target="_blank"
+                          class="initiative-group group-assessment"
+                          >ARC</a
+                        >
                         tools),
                         <a
                           href="https://ai4society.github.io/projects/group_rec/index.html"
                           target="_blank"
+                          class="initiative-group group-tools"
                           >group recommendation</a
                         >, metaconition-based
-                        <a href="https://github.com/ai4society/sofai_tool/" target="_blank"
+                        <a
+                          href="https://github.com/ai4society/sofai_tool/"
+                          target="_blank"
+                          class="initiative-group group-tools"
                           >SOFAI tool</a
                         >
                         to combine fast (e.g., LLMs) and slow thinking (e.g., reasoners), and
@@ -127,22 +142,26 @@
                         <a
                           href="https://ai4society.github.io/projects/chatbots_page/index.html"
                           target="_blank"
+                          class="initiative-group group-societal"
                           >chatbots</a
                         >
                         in trust-sensitive domains, viz.
                         <a
                           href="https://sites.google.com/site/biplavsrivastava/research-1/ai-and-elections"
                           target="_blank"
+                          class="initiative-group group-societal"
                           >elections</a
                         >,
                         <a
                           href="https://ai4society.github.io/projects/InfoSpread/index.html"
                           target="_blank"
+                          class="initiative-group group-societal"
                           >opinion networks</a
                         >, and
                         <a
                           href="https://ai4society.github.io/projects/traffic-page/index.html"
                           target="_blank"
+                          class="initiative-group group-societal"
                           >traffic (for SC)</a
                         >.
                       </p>
