Fix HTML syntax and correct term 'metacognition'

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                           href="https://ai4society.github.io/planfm/"
                           target="_blank"
                           class="initiative-group group-planning"
-                          >training</a
-                        >, large language models and
+                          >training</a>, large language models and
                         <a
                           href="https://ai4society.github.io/projects/ontology/index.html"
                           target="_blank"
@@ -130,7 +129,7 @@
                           target="_blank"
                           class="initiative-group group-tools"
                           >group recommendation</a
-                        >, metaconition-based
+                        >, metacognition-based
                         <a
                           href="https://github.com/ai4society/sofai_tool/"
                           target="_blank"
