Fix HTML structure and formatting in index.html

--- a/members/index.html
+++ b/members/index.html
@@ -198,7 +198,9 @@
 
                         <img src="images_members/john.jpg">
                         <figcaption style="padding-top: -10%;">
-                            <b>John Aydin</b><br><br>
+                            <b>John Aydin</b><br>
+                            Graduated: B.S., May 2025. MS (2025-) <br><br>
+                            
                             <a target="_blank" href="https://github.com/John-A-Aydin">Homepage</a>,
                             <a target="_blank" href="mailto:jaaydin@email.sc.edu">jaaydin@email.sc.edu</a>
                             <br>
@@ -345,6 +347,7 @@
 </body>
 
 </html>
+
 
 
 
