update Demo/ Publication page
Added - OMEGA AAAI-26

--- a/demos/index.html
+++ b/demos/index.html
@@ -67,6 +67,47 @@
               <iframe
                 width="300"
                 height="200"
+                src="https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/preview"
+                title="OMEGA: Ontology-Driven Explanations for MAPF – AAAI-26 Demo"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+
+            <div style="flex: 1">
+              <h3 class="card-text">
+                OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding | AAAI 2026 Demo
+                <span class="tag tag-method">Automated Planning</span>
+                <span class="tag tag-method">Ontology</span>
+              </h3>
+              <p>
+                OMEGA links MAPF execution traces to a planning ontology to produce transparent,
+                queryable explanations of agent actions, conflicts, and resolutions—supporting
+                SPARQL-based “why/why not” queries and traceability across plans and runs.
+              </p>
+              <a
+                href="../publications/papers_local/AAAI_26_Demo_MAPF_Ontology.pdf"
+                target="_blank"
+                rel="noopener noreferrer"
+                >[Paper]</a
+              >
+              <a
+                href="https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/view"
+                target="_blank"
+                rel="noopener noreferrer"
+                >[Demo Video]</a
+              >
+            </div>
+          </div>
+          <br /><br />
+
+
+          <div style="display: flex; justify-content: center; gap: 15px">
+            <div style="flex: 0.8">
+              <iframe
+                width="300"
+                height="200"
                 src="https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/preview"
                 title="GAICo Demonstration"
                 frameborder="0"
