--- a/publications/index.html
+++ b/publications/index.html
@@ -89,6 +89,20 @@
                         <h2>2026</h2>
                         <ul class="papers-list">
                             
+                        <li><b>OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</b><br>
+                            <i>Proceedings of the Thirty-Ninth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-26 Demo), Singapore, January 2026 (AR=27%)</i><br>
+                            Bharath Muppasani, Ritirupa Dey, Biplav Srivastava, Vignesh Narayanan
+                            <br>
+                            <a href='./papers_local/AAAI_26_Demo_MAPF_Ontology.pdf' target="_blank">[Paper]</a>
+                            <a href='https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/view' target="_blank">[Video]</a>
+                            <span class="tag tag-type">Demo</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <span class="tag tag-method">Ontology</span>
+                            <span class="tag tag-method">Dynamical Systems</span>"
+                            <br>
+                        </li>
+
+
                         <li><b> GAICo: A Deployed and Extensible Framework for Evaluating Diverse 
                                  and Multimodal Generative AI Outputs </b><br>
                         <i>Proceedings of the Thirty-Eighth Annual Conference on Innovative Applications of Artificial Intelligence 
@@ -112,7 +126,6 @@
                         <h2>2025</h2>
 
                         <ul class="papers-list">
-
 
                             <li><b>On Identifying Why and When Foundation Models Perform Well on Time-Series Forecasting Using Automated Explanations and Rating</b><br>
                                 <i>AAAI2025 Fall Symposium on  AI Trustworthiness and Risk Assessment for Challenged Contexts (ATRACC), Arlington, VA, USA, Nov 2025 (Time-Series, XAI)</i><br>
@@ -331,6 +344,7 @@
                         <!-- 2024 papers -->
                         <h2>2024</h2>
                         <ul class="papers-list">
+
 
                             <li><b>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its
                                     Applications</b>
