--- a/demos/index.html
+++ b/demos/index.html
@@ -63,17 +63,16 @@
           <br />
 
           <div style="display: flex; justify-content: center; gap: 15px">
+            
             <div style="flex: 0.8">
-              <iframe
-                width="300"
-                height="200"
-                src="https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/preview"
-                title="OMEGA: Ontology-Driven Explanations for MAPF – AAAI-26 Demo"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
+              <a href="https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/view"
+                target="_blank" rel="noopener noreferrer">
+                <img src="./images/omega-AAAI-26.png"
+                  alt="OMEGA MAPF Ontology Demo"
+                  style="width:280px;height:200px;border-radius:10px;object-fit:cover;cursor:pointer;">
+              </a>
             </div>
+
 
             <div style="flex: 1">
               <h3 class="card-text">
