--- a/publications/index.html
+++ b/publications/index.html
@@ -88,6 +88,27 @@
                         <!-- 2026 papers -->
                         <h2>2026</h2>
                         <ul class="papers-list">
+
+                        <li><b>Chatsparent: An Interactive System for Detecting and Mitigating Cognitive Fatigue in LLMs</b><br>
+                            <i>Proceedings of the Thirty-Ninth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-26 Demo), Singapore, January 2026 (AR=27%)</i><br>
+                            Riju Marwah, Vishal Pallagani, Ritvik Garimella, Amit Sheth
+                            <br>
+                            <a href='./papers_local/chatsparent_aaai_demo.pdf' target="_blank">[Paper]</a>
+                            <a href='https://www.youtube.com/watch?v=ktqkZyYWDDE' target="_blank">[Video]</a>
+                            <span class="tag tag-type">Demo</span>
+                            <br>
+                        </li>
+
+                        <li><b>GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation</b><br>
+                            <i>Proceedings of the Thirty-Ninth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-26 Demo), Singapore, January 2026 (AR=27%)</i><br>
+                            Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava
+                            <br>
+                            <a href='' target="_blank">[Paper]</a>
+                            <a href='' target="_blank">[Video]</a>
+                            <span class="tag tag-type">Demo</span>
+                            <span class="tag tag-method">Trust Rating</span>
+                            <br>
+                        </li>
                             
                         <li><b>OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</b><br>
                             <i>Proceedings of the Thirty-Ninth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-26 Demo), Singapore, January 2026 (AR=27%)</i><br>
@@ -98,7 +119,7 @@
                             <span class="tag tag-type">Demo</span>
                             <span class="tag tag-method">Automated Planning</span>
                             <span class="tag tag-method">Ontology</span>
-                            <span class="tag tag-method">Dynamical Systems</span>"
+                            <span class="tag tag-method">Dynamical Systems</span>
                             <br>
                         </li>
 
