Update demo paper details for AAAI 2026

--- a/index.html
+++ b/index.html
@@ -253,28 +253,8 @@
 
                         <div class="timeline-content">
                           <p>
-                            Three AI4Society demos were accepted to the AAAI Demonstrations Track
-                            (Singapore, Jan 2026):
+                            Three demo papers accepted at AAAI 2026 on GAICO, Omega and ChatsParent.
                           </p>
-                          <ul>
-                            <li>
-                              <b>Chatsparent: An Interactive System for Detecting and Mitigating Cognitive Fatigue in LLMs</b><br>
-                              Riju Marwah, Vishal Pallagani, Ritvik Garimella, Amit Sheth<br>
-                              <a href="publications/papers_local/chatsparent_aaai_demo.pdf" target="_blank">[Paper]</a>
-                              <a href="https://www.youtube.com/watch?v=ktqkZyYWDDE" target="_blank">[Video]</a>
-                            </li>
-                            <li>
-                              <b>GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation</b><br>
-                              Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava<br>
-                              (Paper/video links coming soon)
-                            </li>
-                            <li>
-                              <b>OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</b><br>
-                              Bharath Muppasani, Ritirupa Dey, Biplav Srivastava, Vignesh Narayanan<br>
-                              <a href="publications/papers_local/AAAI_26_Demo_MAPF_Ontology.pdf" target="_blank">[Paper]</a>
-                              <a href="https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/view" target="_blank">[Video]</a>
-                            </li>
-                          </ul>
                         </div>
                       </div>
                       <!-- End of November 2025 -->
