Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/publications/index.html
+++ b/publications/index.html
@@ -103,8 +103,8 @@
                             <i>Proceedings of the Thirty-Ninth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-26 Demo), Singapore, January 2026 (AR=27%)</i><br>
                             Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava
                             <br>
-                            <a href='' target="_blank">[Paper]</a>
-                            <a href='' target="_blank">[Video]</a>
+                            <a href='https://arxiv.org/abs/2508.16753' target="_blank">[Paper]</a>
+                            <a href='https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view' target="_blank">[Video]</a>
                             <span class="tag tag-type">Demo</span>
                             <span class="tag tag-method">Trust Rating</span>
                             <br>
@@ -968,15 +968,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
