Add links to demo papers accepted at AAAI 2026

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
                         <div class="timeline-content">
                           <p>
-                            Three demo papers accepted at AAAI 2026 on GAICO, Omega and ChatsParent.
+                            Three demo papers accepted at AAAI 2026 on <a href="https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view" target="_blank">GAICO</a>, <a href="https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/view" target="_blank">Omega</a> and <a href="https://www.youtube.com/watch?v=ktqkZyYWDDE" target="_blank">Chatsparent</a>.
                           </p>
                         </div>
                       </div>
