Added keynote talk entry for AAAI Fall 2025
Added a new timeline entry for Biplav's keynote talk at AAAI 2025.

--- a/index.html
+++ b/index.html
@@ -256,6 +256,17 @@
                             Three demo papers accepted at AAAI 2026 on <a href="https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view" target="_blank">GAICO</a>, <a href="https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/view" target="_blank">Omega</a> and <a href="https://www.youtube.com/watch?v=ktqkZyYWDDE" target="_blank">Chatsparent</a>.
                           </p>
                         </div>
+
+                      <div class="timeline-content">
+                        <p>Biplav gave a keynote talk, 
+                          <i>Extending Transparency Beyond Developers in AI-Driven Decision Making </i>,  
+                          <a  href='https://sites.google.com/view/aaai-atracc/technical-program'
+                        target="_blank">'AI Trustworthiness and Risk Assessment for Challenged Contexts (ATRACC)</a>, 
+                          AAAI 2025 Fall Symposium, on Nov 7,2025.
+                        </p>
+                      </div>
+
+                        
                       </div>
                       <!-- End of November 2025 -->
 
