--- a/publications/index.html
+++ b/publications/index.html
@@ -89,6 +89,21 @@
                         <h2>2026</h2>
                         <ul class="papers-list">
 
+
+                        <li><b> GAICo: A Deployed and Extensible Framework for Evaluating Diverse 
+                                 and Multimodal Generative AI Outputs </b><br>
+                        <i>Proceedings of the Thirty-Eighth Annual Conference on Innovative Applications of Artificial Intelligence 
+                            (<a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>), 
+                            Singapore, January 2026 (Evaluation, LLMs, AR=19%)</i><br>
+                            Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava
+                              <br>
+                                <a href='https://arxiv.org/abs/2508.16753' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Conference</span>
+                                <span class="tag tag-method">Trust Rating</span>
+                              <br>
+                           </li>
+
+                            
                         <li><b>Chatsparent: An Interactive System for Detecting and Mitigating Cognitive Fatigue in LLMs</b><br>
                             <i>Proceedings of the Thirty-Ninth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-26 Demo), Singapore, January 2026 (AR=27%)</i><br>
                             Riju Marwah, Vishal Pallagani, Ritvik Garimella, Amit Sheth
@@ -101,7 +116,7 @@
 
                         <li><b>GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation</b><br>
                             <i>Proceedings of the Thirty-Ninth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-26 Demo), Singapore, January 2026 (AR=27%)</i><br>
-                            Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava
+                            Pallav Koppisetti, Nitin Gupta, Kausik Lakkaraju, Biplav Srivastava
                             <br>
                             <a href='https://arxiv.org/abs/2508.16753' target="_blank">[Paper]</a>
                             <a href='https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view' target="_blank">[Video]</a>
@@ -122,21 +137,6 @@
                             <span class="tag tag-method">Dynamical Systems</span>
                             <br>
                         </li>
-
-
-                        <li><b> GAICo: A Deployed and Extensible Framework for Evaluating Diverse 
-                                 and Multimodal Generative AI Outputs </b><br>
-                        <i>Proceedings of the Thirty-Eighth Annual Conference on Innovative Applications of Artificial Intelligence 
-                            (<a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>), 
-                            Singapore, January 2026 (Evaluation, LLMs, AR=19%)</i><br>
-                            Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava
-                              <br>
-                                <a href='https://arxiv.org/abs/2508.16753' target="_blank">[Paper]</a>
-                                <span class="tag tag-type">Conference</span>
-                                <span class="tag tag-method">Trust Rating</span>
-                              <br>
-                           </li>
-
 
                             
                         </ul>
@@ -968,3 +968,4 @@
 </body>
 
 </html>
+
