Revise event description for AIx initiative
Updated event details for AIx: Safe AI for Seniors.

--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
                                 target="_blank"
                                 >AIx: Safe AI for Seniors</a
                               ></b
-                            >, will be held on November 14 (Friday). Sponsored by AAAI and local
-                            organizations, this community outreach initiative will focus on the role
-                            of AI in supporting senior citizens. RSVP and join us.
+                            >, was held on November 14 (Friday). Sponsored by AAAI and local
+                            organizations, this community outreach initiative focused on the role
+                            of AI in keeping senior citizens safe and independent.
                           </p>
                         </div>
 
