--- a/index.html
+++ b/index.html
@@ -274,9 +274,11 @@
 
                       <div class="timeline-content">
                         <p>Biplav gave a keynote talk, 
-                          <i>Extending Transparency Beyond Developers in AI-Driven Decision Making </i>,  
-                          <a  href='https://sites.google.com/view/aaai-atracc/technical-program'
-                        target="_blank">'AI Trustworthiness and Risk Assessment for Challenged Contexts (ATRACC)</a>, 
+                          <i>Extending Transparency Beyond Developers in AI-Driven Decision Making</i>, in  
+                          <a  href='https://sites.google.com/view/aaai-atracc/technical-program' 
+                        target="_blank">'AI Trustworthiness and Risk Assessment for Challenged Contexts (ATRACC)</a>, and 
+                          served on a panel discussion on AI safety in <a  href='https://www.sei.cmu.edu/events/aaai-fall-symposium-engineering-safety-critical-ai-systems/'
+                        target="_blank">'Engineering Safety-Critical AI Systems</a> at 
                           AAAI 2025 Fall Symposium, on Nov 7,2025.
                         </p>
                       </div>
