ICAPS 25 LinkedIn Post

--- a/publications/index.html
+++ b/publications/index.html
@@ -159,8 +159,7 @@
                             </li>
 
 
-                            <li><b>Revisiting LLMs in Planning from Literature Review: a Semi-Automated Analysis 
-                                Approach and Evolving Categories Representing Shifting Perspectives, 
+                            <li><b>Revisiting LLMs in Planning from Literature Review: a Semi-Automated Analysis Approach and Evolving Categories Representing Shifting Perspectives, 
                                 </b><br>
                                 <i>Proceedings of the 35th International Conference on Automated Planning and 
                                 Scheduling (ICAPS), 2025, Melbourne, Australia, Nov 2025 (Planning, LLMs, AR=22.8%)</i><br>
@@ -170,6 +169,8 @@
                                     target="_blank">[Paper]</a>
                                 <a href='https://ai4society.github.io/LLM-Planning-Viz/index.html#'
                                     target="_blank">[Visualization Tool]</a>
+                                <a href='https://www.linkedin.com/posts/niting9_icaps2025-ai-machinelearning-activity-7400896428866293760-s9kc?utm_source=share&utm_medium=member_desktop&rcm=ACoAADuM5WkB8J5zV_bVoUUh3JzTkpJL1L9DPVs'
+                                    target="_blank">[LinkedIn Post]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Neuro-Symbolic AI</span>
                                 <span class="tag tag-method">Automated Planning</span>
